base/acme/openshift/pki-acme-route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: pki-acme
  name: pki-acme
spec:
  port:
    targetPort: 8080-tcp
    # targetPort: 8443-tcp
  # tls:
  #   certificate: |-
  #     -----BEGIN CERTIFICATE-----
  #     ...
  #     -----END CERTIFICATE-----
  #   key: |-
  #     -----BEGIN PRIVATE KEY-----
  #     ...
  #     -----END PRIVATE KEY-----
  #   caCertificate: |-
  #     -----BEGIN CERTIFICATE-----
  #     ...
  #     -----END CERTIFICATE-----
  #   destinationCACertificate: |-
  #     -----BEGIN CERTIFICATE-----
  #     ...
  #     -----END CERTIFICATE-----
  #   insecureEdgeTerminationPolicy: Allow
  #   termination: reencrypt
  to:
    kind: Service
    name: pki-acme
    weight: 100
  wildcardPolicy: None
